Add file-update feature

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,8 +7,8 @@
 
             <h1 class="my-4">Shop Name</h1>
             <div class="list-group">
-                <a href="#" class="list-group-item">Logowanie</a>
-                <a href="#" class="list-group-item">Rejestracja</a>
+                <a href="/login" class="list-group-item">Logowanie</a>
+                <a href="/register" class="list-group-item">Rejestracja</a>
             </div>
 
         </div>
