--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="row">
+        <div class = "h-100">
+            <div class="col-lg-12 text-center">
 
-        <div class="col-lg-3">
+                <h1 class="my-4">SUW</h1>
+                <div class="list-group">
+                    <a href="/login" class="list-group-item">Logowanie</a>
+                    <a href="/register" class="list-group-item">Rejestracja</a>
+                </div>
 
-            <h1 class="my-4">Shop Name</h1>
-            <div class="list-group">
-                <a href="/login" class="list-group-item">Logowanie</a>
-                <a href="/register" class="list-group-item">Rejestracja</a>
             </div>
-
         </div>
-    </div>
 {% endblock %}
