--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
         <link href="{{ asset('bootstrap/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="{{ asset('bootstrap/css/shop-homepage.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/mystyle.css') }}" rel="stylesheet">
     {% endblock %}
 
 </head>
