--- a/app/Resources/views/default/subfile.html.twig
+++ b/app/Resources/views/default/subfile.html.twig
@@ -1,7 +1,57 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ form_start(form) }}
-        {{ form_row(form.brochure) }}
-    {{ form_end(form) }}
+    <div class="row mt-4 mb-3">
+        {% if files %}
+            <div class="col-lg-12 table-wrapper-scroll-y my-custom-scrollbar">
+                <table class="table table-bordered table-striped mb-0">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nazwa pliku</th>
+                            <th scope="col">Typ pliku</th>
+                            <th scope="col">Data dodania</th>
+                            <th scope="col">Przedmiot</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for ro in files %}
+                            <tr>
+                                <th scope="row">{{ ro.id }}</th>
+                                <td>{{ ro.nameFile }}</td>
+                                <td>{{ ro.extensionFile }}</td>
+                                <td>{{ ro.createdAt }}</td>
+                                <td>{{ ro.subjectName }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
+        {% if form %}
+            <div class="col-lg-4">
+                {{ form_start(form) }}
+                    <div class="form-group">
+                        <label>Nazwa pliku</label>
+                        <div>{{ form_widget(form.namefile) }}</div>
+                        {#<div class="form-text text-muted">Nazwa pliku.</div>#}
+                    </div>
+                    <div class="form-group">
+                        <label>Nazwa przedmiotu</label>
+                        <div>{{ form_widget(form.subjectname) }}</div>
+                        {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
+                    </div>
+                    <div class="form-group">
+                        <label>Plik</label>
+                        <div>{{ form_widget(form.brochure) }}</div>
+                        {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
+                    </div>
+                {{ form_row(form.save) }}
+                {{ form_end(form) }}
+            </div>
+        {% endif %}
+        {#{{ form_start(form) }}
+            {{ form_row(form.brochure) }}
+        {{ form_end(form) }}#}
+    </div>
 {% endblock %}
