--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,14 +2,14 @@
 
 {% block body %}
         <div class = "h-100">
-            <div class="col-lg-12 text-center">
-
-                <h1 class="my-4">SUW</h1>
-                <div class="list-group">
-                    <a href="/login" class="list-group-item">Logowanie</a>
-                    <a href="/register" class="list-group-item">Rejestracja</a>
+            <div class="col-lg-12 text-center mt-5">
+                <div class="form-text">
+                    <a href="/login" class="text-decoration-none text-dark"><h1 class="display-4">Logowanie</h1></a>
                 </div>
-
+                <div class="border-bottom"></div>
+                <div class="form-text">
+                    <a href="/register" class="text-decoration-none text-dark"><h1 class="display-4">Rejestracja</h1></a>
+                </div>
             </div>
         </div>
 {% endblock %}
