--- a/app/Resources/views/default/subfile.html.twig
+++ b/app/Resources/views/default/subfile.html.twig
@@ -37,11 +37,11 @@
                                 <td>{{ ro.subjectName }}</td>
                                 {% if is_granted("ROLE_ADMIN") %}
                                     <td>
-                                        <a href="/Upload/delete/{{ ro.id }}" class="btn btn-danger" role="button">Remove</a>
+                                        <a href="/wyklady/delete/{{ ro.id }}" class="btn btn-danger" role="button">Remove</a>
                                     </td>
                                 {% endif %}
                                 <td>
-                                    <a href="/Upload/get/{{ ro.id }}" class="btn btn-info" role="button">Download</a>
+                                    <a href="/wyklady/get/{{ ro.id }}" class="btn btn-info" role="button">Download</a>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -50,26 +50,28 @@
             </div>
         {% endif %}
         {% if form %}
-            <div class="col-lg-12">
-                {{ form_start(form) }}
-                    <div class="form-group">
-                        <label>Nazwa pliku</label>
-                        <div>{{ form_widget(form.namefile) }}</div>
-                        {#<div class="form-text text-muted">Nazwa pliku.</div>#}
-                    </div>
-                    <div class="form-group">
-                        <label>Nazwa przedmiotu</label>
-                        <div>{{ form_widget(form.subjectname) }}</div>
-                        {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
-                    </div>
-                    <div class="form-group">
-                        <label>Plik</label>
-                        <div>{{ form_widget(form.brochure) }}</div>
-                        {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
-                    </div>
-                {{ form_row(form.save) }}
-                {{ form_end(form) }}
-            </div>
+            {% if is_granted("ROLE_ADMIN") %}
+                <div class="col-lg-12">
+                    {{ form_start(form) }}
+                        <div class="form-group">
+                            <label>Nazwa pliku</label>
+                            <div>{{ form_widget(form.namefile) }}</div>
+                            {#<div class="form-text text-muted">Nazwa pliku.</div>#}
+                        </div>
+                        <div class="form-group">
+                            <label>Nazwa przedmiotu</label>
+                            <div>{{ form_widget(form.subjectname) }}</div>
+                            {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
+                        </div>
+                        <div class="form-group">
+                            <label>Plik</label>
+                            <div>{{ form_widget(form.brochure) }}</div>
+                            {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
+                        </div>
+                    {{ form_row(form.save) }}
+                    {{ form_end(form) }}
+                </div>
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
