--- a/app/Resources/views/default/stat.html.twig
+++ b/app/Resources/views/default/stat.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <table>
-        <th scope="col">{{ students }}</th>
-        <th scope="col">{{ downloads }}</th>
-        <th scope="col">{{ files }}</th>
+        <th scope="col">students: {{ students }}</th>
+        <th scope="col">pobrania:  {{ downloads }}</th>
+        <th scope="col">pliki: {{ files }}</th>
     </table>
 {% endblock %}
