Add google fonts for brand-icon

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     {% block stylesheets %}
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> 
         <link href="{{ asset('bootstrap/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="{{ asset('bootstrap/css/shop-homepage.css') }}" rel="stylesheet">
