--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -2,8 +2,12 @@
 
 {# TODO: Tranlation for labels#}
 
+
 <div class="container mt-4">
     {{ form_start(form) }}
+    <div class="col">
+        {{ form_errors(form)}}
+    </div>
     <div class="form-text border-bottom">
         <label><h2>Zajerestruj konto.</h2></label>
     </div>
