--- a/app/Resources/views/default/history.html.twig
+++ b/app/Resources/views/default/history.html.twig
@@ -1,16 +1,23 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    <div class="row">
+        <div class="col border-bottom mt-4 mb-4">
+            <label><h2>{{ 'history'|trans }}:</h2></label>
+        </div>
+    </div>
+
     <div class="row">
         {% if downloads %}
-            <div class="col-lg-12 table-wrapper-scroll-y my-custom-scrollbar">
+            <div class="col-lg-12 table-wrapper-scroll-y my-custom-scrollbar border-bottom">
                 <table class="table table-bordered table-striped mb-0">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Numer indeksu</th>
-                        <th scope="col">Plik</th>
-                        <th scope="col">Data</th>
+                        <th scope="col">{{ 'name.accept_index'|trans }}</th>
+                        <th scope="col">{{ 'name.file_name'|trans }}</th>
+                        <th scope="col">{{ 'name.date'|trans }}</th>
                         <th scope="col">IP</th>
 
                     </tr>
@@ -19,11 +26,10 @@
                     {% for dw in downloads %}
                         <tr>
                             <th scope="row">{{ dw.id }}</th>
-                            <td>{{ dw.user.indNumber }}</td>
-                            <td>{{ dw.file.brochureFileName }}</td>
+                            <td>{{ dw.user }}</td>
+                            <td>{{ dw.file }}</td>
                             <td>{{ dw.date|date('d-m-Y H:i:s') }}</td>
                             <td>{{ dw.ip }}</td>
-
                         </tr>
                     {% endfor %}
                     </tbody>
