--- a/app/Resources/views/default/subfile.html.twig
+++ b/app/Resources/views/default/subfile.html.twig
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col border-bottom mt-4 mb-4">
-            <label><h2>Pliki w systemie:</h2></label>
+            <label><h2>{{ 'file.in_system'|trans }}:</h2></label>
         </div>
     </div>
 
@@ -32,14 +32,14 @@
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">Nazwa pliku</th>
-                            <th scope="col">Typ pliku</th>
-                            <th scope="col">Data dodania</th>
-                            <th scope="col">Przedmiot</th>
+                            <th scope="col">{{ 'name.file_name'|trans }}</th>
+                            <th scope="col">{{ 'name.file_type'|trans }}</th>
+                            <th scope="col">{{ 'name.date'|trans }}</th>
+                            <th scope="col">{{ 'name.subject'|trans }}</th>
                             {% if is_granted("ROLE_ADMIN") %}
-                                <th scope="col">Usun</th>
+                                <th scope="col">{{ 'name.remove'|trans }}</th>
                             {% endif %}
-                            <th scope="col">Pobierz</th>
+                            <th scope="col">{{ 'name.download'|trans }}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -52,11 +52,11 @@
                                 <td>{{ ro.subjectName }}</td>
                                 {% if is_granted("ROLE_ADMIN") %}
                                     <td>
-                                        <a href="/wyklady/delete/{{ ro.id }}" class="btn btn-danger" role="button">Remove</a>
+                                        <a href="/file/delete/{{ ro.id }}" class="btn btn-danger" role="button">{{ 'name.remove'|trans }}</a>
                                     </td>
                                 {% endif %}
                                 <td>
-                                    <a href="/wyklady/get/{{ ro.id }}" class="btn btn-info" role="button">Download</a>
+                                    <a href="/file/get/{{ ro.id }}" class="btn btn-info" role="button">{{ 'name.download'|trans }}</a>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -69,24 +69,24 @@
     {% if form %}
         <div class="row">
             <div class="col border-bottom mt-4 mb-4">
-                <label><h2>Załaduj plik.</h2></label>
+                <label><h2>{{ 'name.up'|trans }}:</h2></label>
             </div>
         </div>
         {% if is_granted("ROLE_ADMIN") %}
             {{ form_start(form) }}
                 <div class="row">
                     <div class="form-group col-md-4">
-                        <label>Nazwa pliku</label>
+                        <label>{{ 'name.file_name'|trans }}</label>
                         <div>{{ form_widget(form.namefile) }}</div>
                         {#<div class="form-text text-muted">Nazwa pliku.</div>#}
                     </div>
                     <div class="form-group col-md-4">
-                        <label>Nazwa przedmiotu</label>
+                        <label>{{ 'name.subname'|trans }}</label>
                         <div>{{ form_widget(form.subjectname) }}</div>
                         {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
                     </div>
                     <div class="form-group col-md-4">
-                        <label>Plik</label>
+                        <label>{{ 'file.name'|trans }}</label>
                         <div>{{ form_widget(form.brochure) }}</div>
                         {#<div class="form-text text-muted">Nazwa przedmiotu.</div>#}
                     </div>
